--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - jenkins.env
+      JENKINS_USER:
+      JENKINS_PASS:
 
   webserver2:
     image: httpd
