--- a/node-app/node-app/jenkinsfile
+++ b/node-app/node-app/jenkinsfile
@@ -20,8 +20,8 @@ pipeline {
                         docker build -t nodeapp-image .
 
                         # Deploy to Kubernetes
-                        kubectl apply -f deployment.yaml
-                        kubectl apply -f service.yaml
+                        kubectl apply -f deployment.yaml --validate=false
+                        kubectl apply -f service.yaml --validate=false
                     '
                     """
                 }
