--- a/node-app/node-app/jenkinsfile
+++ b/node-app/node-app/jenkinsfile
@@ -1,29 +1,38 @@
 pipeline {
     agent any
 
+    environment {
+        DOCKER_IMAGE = "tatanagasai20/nodeapp-image:latest" // Replace with your Docker Hub username
+    }
+
     stages {
         stage('Deploy to Kubernetes Master') {
             steps {
                 sshagent(['test']) {
-                    sh """
-                    ssh -o StrictHostKeyChecking=no ubuntu@13.232.221.83 '
-                        # Cleanup old folder
-                        rm -rf test-project
+                    withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
+                        sh """
+                        ssh -o StrictHostKeyChecking=no ubuntu@13.232.221.83 '
+                            # Cleanup old folder
+                            rm -rf test-project
 
-                        # Clone your GitHub repo
-                        git clone https://github.com/Tatanagasai20/test-project.git
+                            # Clone your GitHub repo
+                            git clone https://github.com/Tatanagasai20/test-project.git
 
-                        # Navigate to your app
-                        cd test-project/node-app/node-app
+                            # Navigate to your app
+                            cd test-project/node-app/node-app
 
-                        # Build Docker image
-                        docker build -t nodeapp-image .
+                            # Build, Tag, and Push Docker image
+                            docker build -t nodeapp-image .
+                            docker tag nodeapp-image $DOCKER_IMAGE
+                            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+                            docker push $DOCKER_IMAGE
 
-                        # Deploy to Kubernetes
-                        kubectl apply -f deployment.yaml --validate=false
-                        kubectl apply -f service.yaml --validate=false
-                    '
-                    """
+                            # Deploy to Kubernetes
+                            kubectl apply -f deployment.yaml --validate=false
+                            kubectl apply -f service.yaml --validate=false
+                        '
+                        """
+                    }
                 }
             }
         }
