--- a/node-app/node-app/service.yaml
+++ b/node-app/node-app/service.yaml
@@ -2,11 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nodeapp-service
+  labels:
+    app: nodeapp
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: nodeapp
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 3000
+  - name: http
+    protocol: TCP
+    port: 80           
+    targetPort: 3000    
+    nodePort: 30080     
