--- a/node-app/node-app/deployment.yaml
+++ b/node-app/node-app/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: nodeapp
-        image: tatanagasai20/nodeapp-image:latest  
+        image: tnagasai/nodeapp-image:latest
         ports:
         - containerPort: 3000
