--- a/node-app/node-app/jenkinsfile
+++ b/node-app/node-app/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
             steps {
                 sshagent(['test']) {
                     sh """
-                    ssh -o StrictHostKeyChecking=no ubuntu@13.232.221.83 << EOF
+                    ssh -o StrictHostKeyChecking=no ubuntu@13.232.221.83 
                         # Cleanup old folder
                         rm -rf test-project
 
@@ -34,7 +34,7 @@ pipeline {
                         # Deploy to Kubernetes
                         kubectl apply -f deployment.yaml --validate=false
                         kubectl apply -f service.yaml --validate=false
-                    EOF
+                    
                     """
                 }
             }
