--- a/node-app/node-app/jenkinsfile
+++ b/node-app/node-app/jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
 
                             kubectl apply -f deployment.yaml --validate=false
                             kubectl apply -f service.yaml --validate=false
-                        EOF_REMOTE_SCRIPT  // <--- ENSURE NO LEADING WHITESPACE HERE
+EOF_REMOTE_SCRIPT
                         """
                     }
                 }
