--- a/node-app/node-app/service.yaml
+++ b/node-app/node-app/service.yaml
@@ -2,15 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nodeapp-service
-  labels:
-    app: nodeapp
 spec:
   type: NodePort
   selector:
     app: nodeapp
   ports:
-  - name: http
-    protocol: TCP
-    port: 80           
-    targetPort: 3000    
-    nodePort: 30080     
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
+      nodePort: 30080
