--- a/node-app/node-app/jenkinsfile
+++ b/node-app/node-app/jenkinsfile
@@ -6,33 +6,37 @@ pipeline {
     }
 
     stages {
-        stage('Deploy to Kubernetes Master') {
+        stage('Build & Push Docker Image') {
             steps {
                 withCredentials([usernamePassword(credentialsId: 'dockerhub-creds',
                                                   usernameVariable: 'DOCKER_USERNAME_VAR',
                                                   passwordVariable: 'DOCKER_PASSWORD_VAR')]) {
-                    sshagent(['test']) {
-                        sh """
-                        ssh -o StrictHostKeyChecking=no ubuntu@13.232.221.83 <<'EOF_REMOTE_SCRIPT'
-                            export DOCKER_USERNAME="${DOCKER_USERNAME_VAR}"
-                            export DOCKER_PASSWORD="${DOCKER_PASSWORD_VAR}"
+                    sh '''
+                        rm -rf test-project
+                        git clone https://github.com/Tatanagasai20/test-project.git
+                        cd test-project/node-app/node-app
 
-                            rm -rf test-project
-                            git clone https://github.com/Tatanagasai20/test-project.git
-                            cd test-project/node-app/node-app
+                        docker build -t nodeapp-image .
+                        docker tag nodeapp-image $DOCKER_USERNAME_VAR/nodeapp-image:latest
+                        echo $DOCKER_PASSWORD_VAR | docker login -u $DOCKER_USERNAME_VAR --password-stdin
+                        docker push $DOCKER_USERNAME_VAR/nodeapp-image:latest
+                    '''
+                }
+            }
+        }
 
-                            docker build -t nodeapp-image .
-                            docker tag nodeapp-image "\$DOCKER_USERNAME"/nodeapp-image:latest
+        stage('Deploy to Kubernetes') {
+            steps {
+                sshagent(['k8s-ssh-key']) {
+                    sh '''
+                    ssh -o StrictHostKeyChecking=no ubuntu@<K8S_MASTER_PUBLIC_IP> << EOF
+                        kubectl delete -f test-project/node-app/node-app/deployment.yaml --ignore-not-found=true
+                        kubectl delete -f test-project/node-app/node-app/service.yaml --ignore-not-found=true
 
-                            echo "\$DOCKER_PASSWORD" | docker login -u "\$DOCKER_USERNAME" --password-stdin
-
-                            docker push "\$DOCKER_USERNAME"/nodeapp-image:latest
-
-                            kubectl apply -f deployment.yaml --validate=false
-                            kubectl apply -f service.yaml --validate=false
-EOF_REMOTE_SCRIPT
-                        """
-                    }
+                        kubectl apply -f test-project/node-app/node-app/deployment.yaml
+                        kubectl apply -f test-project/node-app/node-app/service.yaml
+                    EOF
+                    '''
                 }
             }
         }
