--- a/node-app/node-app/jenkinsfile
+++ b/node-app/node-app/jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
 
         stage('Deploy to Kubernetes') {
             steps {
-                sshagent(['k8s-ssh-key']) {
+                sshagent(['test']) {
                     sh '''
                     ssh -o StrictHostKeyChecking=no ubuntu@<K8S_MASTER_PUBLIC_IP> << EOF
                         kubectl delete -f test-project/node-app/node-app/deployment.yaml --ignore-not-found=true
