--- a/node-app/node-app/deployment.yaml
+++ b/node-app/node-app/deployment.yaml
@@ -1,19 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nodeapp-deployment
+  name: node-app
+  labels:
+    app: node-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nodeapp
+      app: node-app
   template:
     metadata:
       labels:
-        app: nodeapp
+        app: node-app
     spec:
       containers:
-      - name: nodeapp
-        image: tnagasai/nodeapp-image:latest
+      - name: node-app
+        image: tnagasai/node-app:latest
         ports:
         - containerPort: 3000
